salesforce/force-app/main/default/objects/Storage_Alert__c/Storage_Alert__c.object-meta.xml
<CustomObject>
    <label>Storage Alert</label>
    <nameField>
        <displayFormat>SA-{0000}</displayFormat>
        <label>Storage Alert Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Storage Alerts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>