salesforce/force-app/main/default/objects/Storage_Alert__c/fields/Alert_Type__c.field-meta.xml
<CustomField>
    <fullName>Alert_Type__c</fullName>
    <label>Alert Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TEMPERATURE_OUT_OF_RANGE</fullName>
            </value>
            <value>
                <fullName>HUMIDITY_OUT_OF_RANGE</fullName>
            </value>
            <value>
                <fullName>LOT_EXPIRED</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>