salesforce/force-app/main/default/objects/Storage_Alert__c/fields/Coffee_Lot__c.field-meta.xml
<CustomField>
    <fullName>Coffee_Lot__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Coffee Lot</label>
    <referenceTo>Coffee_Lot__c</referenceTo>
    <relationshipLabel>Storage Alerts</relationshipLabel>
    <relationshipName>Storage_Alerts</relationshipName>
    <type>Lookup</type>
</CustomField>