salesforce/force-app/main/default/objects/Storage_Alert__c/fields/Handled__c.field-meta.xml
<CustomField>
    <fullName>Handled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Handled</label>
    <type>Checkbox</type>
</CustomField>