salesforce/force-app/main/default/objects/Storage_Alert__c/fields/Warehouse__c.field-meta.xml
<CustomField>
    <fullName>Warehouse__c</fullName>
    <label>Warehouse</label>
    <length>255</length>
    <type>Text</type>
</CustomField>